src/test/ui/consts/min_const_fn/mutable_borrow.stderr
error[E0658]: mutable references are not allowed in constant functions
  --> $DIR/mutable_borrow.rs:3:9
   |
LL |     let b = &mut a;
   |         ^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0658]: mutable references are not allowed in constant functions
  --> $DIR/mutable_borrow.rs:12:13
   |
LL |         let b = &mut a;
   |             ^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
